kubernetes-networks/canary/web-canary-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-canary
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  -
    host: testweb.io
    http:
      paths:
      - path: /web
        backend:
          serviceName: web-canary-svc
          servicePort: 8000
